# study-python-fast-api

./: .gitignore  pyproject.toml
app/: main.py
app/api/v1/: auth.py  users.py
app/core/: config.py  security.py
app/db/: __init__.py  db_context.py  db_user.py
app/models/: user.py
app/services/: user_service.py
app/utils/: typings.py
migrations/: env.py
migrations/versions/: 5d0e99fcee01_init.py
tests/: conftest.py
tests/factory/: user.py
